Project my_project {
  database_type: 'PostgreSQL'
  Note: '''
    Some relationships are not defined as foreign keys due to write operation performance concerns.
    it is all mentioned in the Note section, Notice to "refers to" keyword.

    created_at fields are used to define the newest record, instead of is_approved. 
    This can be changed if application logic require approve operation.
  '''
}


enum construction_period {
  KH_LCNT
  KQ_KH_LCNT
  BCKTKT
  TC
}

Enum bid_package_type {
  TV
  TT
  TC
}

Table administrative_documents {
  id varchar [pk]
  no varchar [not null]
  level varchar [not null]
  date timestamptz [not null]
  pursuant_to_dec_tct_id varchar
  pursuant_to_dec_ttmn_id varchar
}

Table constructions {
  id varchar [pk]
  pursuant_to_dec_tct_id varchar [not null, note: 'refers to [administrative_documents.id]']
}

Table construction_info_snapshots {
  id varchar [pk, not null]
  construction_id varchar [not null, note: 'refers to [constructions.id]']
  submission_id varchar [not null, note: 'refers to [submissions.id]']

  name varchar [not null]
  source_of_funds varchar [not null]

  est_cost decimal [not null]
  est_cost_str varchar [not null]

  impl_start_date timestamptz [not null]
  impl_end_date timestamptz [not null]

  existing_condition_of_the_structure text [not null]
  repair_scope text [not null]

  created_at timestamptz [not null, default: `NOW()`, note:'used to define the newest record']
}

Table bid_packages{
  id varchar [pk]
  construction_id varchar [not null, note: 'refers to [constructions.id]']

  type bid_package_type [not null]
}

Table bid_package_snapshots {
  id varchar [pk]

  bid_package_id varchar [not null]
  submission_id varchar [not null, note: 'refers to [submissions.id]']

  project_owner varchar [not null]
  name varchar [not null]
  short_desc text [not null]

  est_cost decimal [not null]
  est_cost_str varchar [not null]

  bidder_selection_time timestamptz [not null]
  bidder_selection_method varchar [not null]

  successful_bidder_id varchar [note: 'refers to [bidders.id] and can be null if there are no snapshots available for the construction.']
  duration varchar [not null]
  is_completed boolean [not null]

  created_at timestamptz [not null, default: `NOW()`, note:'used to define the newest record']

  Note: 'Bidder schema not provided'
}

Table submissions {
  id varchar [pk]
  construction_id varchar [not null, note: 'refers to [constructions.id]']
  decision_id varchar [not null]

  created_at timestamptz [not null, default: `NOW()`, note:'used to define the newest record']
}

Table decisions {
  id varchar [pk]
  construction_id varchar [not null, note: 'refers to [constructions.id]']
  period construction_period [not null]
}

Table bidders {
  id varchar [pk]
  name varchar [not null]
  address varchar [not null]
  representative_name varchar [not null]
  representative_position varchar [not null]
  bank_account_number varchar [not null]
  bank_name varchar [not null]
  bank_branch varchar [not null]
  tax_id varchar [not null]
  phone_number varchar [not null]
  email varchar [not null]
}

Table contracts {
  id varchar [pk]
  bid_package_id varchar [not null, note: 'refers to [bid_package_snapshots.id]']
  no varchar [not null]
  signing_date timestamptz [not null]
  Note: 'reference to bidder infor through bid_package_snapshots (bid_package_snapshots.successful_bidder_id)'
}

Ref: administrative_documents.pursuant_to_dec_tct_id > administrative_documents.id [delete: cascade]
Ref: administrative_documents.pursuant_to_dec_ttmn_id > administrative_documents.id [delete: cascade]
Ref: administrative_documents.id - submissions.id [delete: cascade]
Ref: administrative_documents.id - decisions.id [delete: cascade]

Ref: submissions.id - construction_info_snapshots.submission_id [delete: cascade]

Ref: bid_package_snapshots.submission_id > submissions.id [delete: cascade]
Ref: bid_package_snapshots.bid_package_id > bid_packages.id [delete: cascade]

Ref: constructions.id - construction_info_snapshots.construction_id [delete: cascade]
Ref: constructions.id < bid_packages.construction_id [delete: cascade]

Ref: constructions.id < decisions.construction_id [delete: cascade]

Ref: submissions.decision_id > decisions.id [delete: cascade]


